[package]
name = "git-lg"
version = "0.1.0"
authors = ["Henry Wallace <henry@henrywallace.io>"]
edition = "2018"

[[bin]]
name = "git-lg"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
failure = "0.1.8"
git2 = "0.13.12"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
log = "0.4.11"
